# cg-precision-hpc

./: .gitignore  CMakeLists.txt  README.md
data/: convergence_double_10.csv  convergence_double_ilu0_50.csv  convergence_double_jacobi_50.csv  convergence_float_10.csv  convergence_float_50.csv  convergence_float_ilu0_50.csv  convergence_float_jacobi_50.csv  drift_comparison_10.csv  drift_comparison_50.csv  tradeoff_50.csv
scripts/: plot_convergence.py  plot_drift.py  plot_preconditioners.py  plot_tradeoff.py
src/: cg_solver.hpp  csr_matrix.hpp  laplacian.hpp  main.cpp  preconditioners.hpp
